--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "NODE_ENV=development nodemon --watch 'src/**' --ext 'ts,json,gql' --ignore 'src/**/*.spec.ts' --ignore 'src/scripts' --exec 'ts-node src/index.ts'",
-    "introspect:dev": "NODE_ENV=development ts-node src/scripts/introspect.ts",
+    "start": "nodemon --watch 'src/**' --ext 'ts,json,gql' --ignore 'src/**/*.spec.ts' --ignore 'src/scripts' --exec 'ts-node src/index.ts'",
+    "introspect": "ts-node src/scripts/introspect.ts",
     "prettier:fix": "npx prettier --write '**/*.{ts,json,md,yaml,yml}'",
     "prettier-check": "npx prettier --check '**/*.{ts,json,md,yaml,yml}'",
     "lint": "npx eslint '**/*.{ts,json}'",
